tg_parser/tests/invalid/invalid1_missing_port_semicolon.tg
gate BAD_GATE(in a, b out y) {
    pmos drain=y, gate=a, source=VDD;
    nmos drain=y, gate=a, source=GND;
}
